--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,14 +25,20 @@ jobs:
       id: buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: ../../
-        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/portfolio.glhweb.com-frontend:latest
+    - name: Build docker image
+      run: docker build ../../Dockerfile
+
+    - name: Build the Docker image # push The image to the docker hub
+      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/portfolio.glhweb.com-frontend:latest
+
+#    - name: Build and push
+#      id: docker_build
+#      uses: docker/build-push-action@v2
+#      with:
+#        context: ../../
+#        file: ./Dockerfile
+#        push: true
+#        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/portfolio.glhweb.com-frontend:latest
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
