--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,8 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
 
+# WHEN TESTS PASS THE PROJECT WILL BE BUILT IN DOCKER
+
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
