--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,31 +15,31 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - run: npm ci
-      - run: npm run build --if-present
+          cache: 'npm'
+      - run: npm install
+      - run: npm run build
       - run: npm test
 
       # WHEN TESTS PASS THE PROJECT WILL BE BUILT IN DOCKER
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Build and push
         id: docker_build
@@ -48,7 +48,7 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/home.glhweb.com-frontend
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/home.glhweb.com
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
