--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,24 +31,24 @@ jobs:
 
       # WHEN TESTS PASS THE PROJECT WILL BE BUILT IN DOCKER
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    #   - name: Login to Docker Hub
+    #     uses: docker/login-action@v2
+    #     with:
+    #       username: ${{ secrets.DOCKER_HUB_USERNAME }}
+    #       password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
+    #   - name: Set up Docker Buildx
+    #     id: buildx
+    #     uses: docker/setup-buildx-action@v2
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/home.glhweb.com
+    #   - name: Build and push
+    #     id: docker_build
+    #     uses: docker/build-push-action@v2
+    #     with:
+    #       context: .
+    #       file: Dockerfile
+    #       push: true
+    #       tags: ${{ secrets.DOCKER_HUB_USERNAME }}/home.glhweb.com
 
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+    #   - name: Image digest
+    #     run: echo ${{ steps.docker_build.outputs.digest }}
