--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+        env:
+          BASE_PATH: '/${{ github.event.repository.name }}'
       - run: npm install
       - run: npm run build
       - run: npm test
