--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/typography": "^0.5.14",
 		"@tailwindcss/vite": "^4.0.0",
+		"autoprefixer": "^10.4.20",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^1.7.1",
 		"flowbite-svelte-icons": "^2.2.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
 	},
