--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,14 +20,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm install
-      - run: npm run build
-      - run: npm test
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - run: pnpm install
+      - run: pnpm run build
+      - run: pnpm test
 
       # WHEN TESTS PASS THE PROJECT WILL BE BUILT IN DOCKER
 
