--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,14 +27,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - run: pnpm install
-      - run: pnpm run build
-      - run: pnpm test
+      - run: npm install
+      - run: npm run build
+      - run: npm test
 
       # WHEN TESTS PASS THE PROJECT WILL BE BUILT IN DOCKER
 
