--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,9 +29,9 @@ jobs:
 
       - run: npm install
       - run: npm run build
-      - run: npm test
+    #   - run: npm test
 
-      # WHEN TESTS PASS THE PROJECT WILL BE BUILT IN DOCKER
+    # WHEN TESTS PASS THE PROJECT WILL BE BUILT IN DOCKER
 
     #   - name: Login to Docker Hub
     #     uses: docker/login-action@v2
