--- a/package.json
+++ b/package.json
@@ -50,5 +50,11 @@
 	},
 	"keywords": [
 		"svelte"
-	]
+	],
+	"dependencies": {
+		"@popperjs/core": "^2.11.8",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^1.8.1",
+		"tailwind-merge": "^3.3.1"
+	}
 }
