--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,11 +29,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: 'pnpm'
 
-      - run: npm install
       - run: pnpm install
-      - run: npm run build
+      - run: pnpm run build
     #   - run: npm test
 
     # WHEN TESTS PASS THE PROJECT WILL BE BUILT IN DOCKER
