--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"autoprefixer": "^10.4.20",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^1.8.1",
+		"flowbite-svelte-icons": "^2.2.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.5",
